--- a/style.css
+++ b/style.css
@@ -57,7 +57,36 @@
 .box {
     background-color: brown;
     border: 5px solid black;
+margin-top: 100px;
+margin-bottom: 80px;
+margin-left: 150px;
+margin-right: 120px;
+padding-top: 80px;
+padding-bottom: 100px;
+padding-left: 200px;
+padding-right: 80px;
+
+
 }
+ul{
+  list-style-type: none;
+margin: 0;
+padding: 0;
+}
+
+li {
+  display: inline;
+}
+
+.dropdown-content{
+  display: none;
+}
+
+a{
+  display: block;
+  float: left;
+}
+
 
 
 /* zde je vytvoreno navigacni menu */
